Plans for filtered bialgebra of knots and chord diagrams

--- a/macros.tex
+++ b/macros.tex
@@ -8,6 +8,9 @@
 % Common operations
 \newcommand{\gr}{\operatorname{gr}}
 
+% Common sets
+\newcommand{\singularknots}{\mathcal{K}^{\bullet}}
+
 % Crossings and singularities
 \newcommand*{\double}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_singular_point.pdf}}}
 \newcommand*{\poscross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_positive_crossing.pdf}}}
