Restructure, prove K is filtered bialgebra except for Willerton proof

--- a/references.bib
+++ b/references.bib
@@ -164,3 +164,14 @@
 	year = {1998},
 }
 
+@article{vassiliev-invariants-and-the-hopf-algebra-of-chord-diagrams,
+	title = {Vassiliev invariants and the Hopf algebra of chord diagrams},
+	volume = {119},
+	DOI = {10.1017/S0305004100073965},
+	number = {1},
+	journal = {Mathematical Proceedings of the Cambridge Philosophical
+	           Society},
+	author = {Willerton, Simon},
+	year = {1996},
+	pages = {55–65},
+}
